dopieszczenie wielu rzeczy